Fix settings readme text alignment

--- a/styles/packages/settings-view/package-readme.less
+++ b/styles/packages/settings-view/package-readme.less
@@ -1,4 +1,8 @@
 .settings-view .package-readme {
+  p {
+    text-align: initial;
+  }
+
   h1, h2, h3, h4 {
     color: inherit;
   }
